# perfect-world-server-plugin

./: Dockerfile  GUIDE.md  README.md  meson.build
cross/: linux-x86.txt  linux-x86_64.txt
src/: libs.h  meson.build  plugin.cpp
src/libs/: libdetour.c  libsigscan.h
src/sdk/cnet/gamed/: gsp_if.h
src/sdk/gdeliveryd/: countrybattleman.h
